image styling in index

--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
           
             <l class="first-name">Courtney M<sup>c</sup>G</l><l class="last-name">orrill</l>
           </h1>
-          <a class="image pull-left" style="margin-left: 50px; margin-right: 20px;">
-            <img class="media-object visible-desktop" src="images/mudtugme.jpg">
-          </a>
+          <img class="my-image pull-left media-object visible-desktop" src="images/mudtugme.jpg">
           <div class="media-body">
             <h3 class="media-heading">Things To Know</h3>
               <p>21 years old and originally from Maine. </p>
