--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
     <!-- Custom styles for this template -->
     <link href="dist/css/dashboard.css" rel="stylesheet">
     <link href="dist/css/header.css" rel="stylesheet">
+    <link href="dist/css/contact.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -51,46 +52,46 @@
             <l class="first-name">Courtney M<sup>c</sup>G</l><l class="last-name">orrill</l>
           </h1>
 
-          <a href="http://www.linkedin.com/in/courtneymcgorrill" class="pull-left" style="margin-left: 50px; margin-right: 20px;">
-            <img class="media-object visible-desktop" width="100px" height="100px" src="images/linkedin.png">
+          <a class="contact-icon" href="http://www.linkedin.com/in/courtneymcgorrill" class="pull-left" style="margin-left: 50px; margin-right: 20px;">
+            <img class="media-object visible-desktop" src="images/linkedin.png">
           </a>
           <div class="media-body" style="margin-bottom:50px;">
             <h3 class="media-heading">Connect with me.</h3>
-            <a href="http://www.linkedin.com/in/courtneymcgorrill">
-              <img class="media-object hidden-desktop" width="100px" height="100px" src="images/linkedin.png">
+            <a class="contact-icon" href="http://www.linkedin.com/in/courtneymcgorrill">
+              <img class="media-object hidden-desktop" src="images/linkedin.png">
             </a>
             <p>Connect with me on LinkedIn and get to know me better as a professional.</p>
           </div>
 
-          <a href="mailto:cmm5215@rit.edu" target="_top" class="pull-left" style="margin-left: 150px; margin-right: 20px;">
-            <img class="media-object visible-desktop" width="100px" height="100px" src="images/gmail.png">
+          <a class="contact-icon" href="mailto:cmm5215@rit.edu" target="_top" class="pull-left" style="margin-left: 150px; margin-right: 20px;">
+            <img class="media-object visible-desktop" src="images/gmail.png">
           </a>
           <div class="media-body" style="margin-bottom: 50px;">
             <h3 class="media-heading">Mail me.</h3>
-            <a href="mailto:cmm5215@rit.edu" target="_top">
-              <img class="media-object hidden-desktop" width="100px" height="100px" src="images/gmail.png">
+            <a class="contact-icon" href="mailto:cmm5215@rit.edu" target="_top">
+              <img class="media-object hidden-desktop" src="images/gmail.png">
             </a>
             <p>I run on east coast time and check my email frequently.</p>              
           </div>
 
-          <a href="https://twitter.com/court_mcgort" class="pull-left" style="margin-left: 150px; margin-right: 20px;">
-            <img class="media-object visible-desktop" width="100px" height="100px" src="images/twitter.png">
+          <a class="contact-icon" href="https://twitter.com/court_mcgort" class="pull-left" style="margin-left: 150px; margin-right: 20px;">
+            <img class="media-object visible-desktop" src="images/twitter.png">
           </a>
           <div class="media-body" style="margin-bottom: 50px;">
             <h3 class="media-heading">Follow me.</h3>
-            <a href="https://twitter.com/court_mcgort">
-              <img class="media-object hidden-desktop" width="100px" height="100px" src="images/twitter.png">
+            <a class="contact-icon" href="https://twitter.com/court_mcgort">
+              <img class="media-object hidden-desktop" src="images/twitter.png">
             </a>
             <p>My first language on Twitter is sarcasm. My second is #hashtag. Giggle at my lame jokes or snicker at my daily misfortunes.</p>
           </div>
 
-          <a href="https://github.com/cmcgorrill" class="pull-left" style="margin-left: 150px; margin-right: 20px;">
-            <img class="media-object visible-desktop" width="100px" height="100px" src="images/git.png">
+          <a class="contact-icon" href="https://github.com/cmcgorrill" class="pull-left" style="margin-left: 150px; margin-right: 20px;">
+            <img class="media-object visible-desktop" src="images/git.png">
           </a>
           <div class="media-body">
             <h3 class="media-heading">Admire me.</h3>
-            <a href=href="https://github.com/cmcgorrill">
-              <img class="media-object hidden-desktop" width="100px" height="100px" src="images/git.png">
+            <a class="contact-icon" href=href="https://github.com/cmcgorrill">
+              <img class="media-object hidden-desktop" src="images/git.png">
             </a>
             <p>Well, admire my code. Keep up with the sloppy code I throw together for school projects, and the occasional personal project.</p>
           </div>
