--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
             <l class="first-name">Courtney M<sup>c</sup>G</l><l class="last-name">orrill</l>
           </h1>
 
-          <a class="contact-icon" href="http://www.linkedin.com/in/courtneymcgorrill" class="pull-left" style="margin-left: 50px; margin-right: 20px;">
+          <a class="contact-icon pull-left" href="http://www.linkedin.com/in/courtneymcgorrill" style="margin-left: 50px; margin-right: 20px;">
             <img class="media-object visible-desktop" src="images/linkedin.png">
           </a>
           <div class="media-body" style="margin-bottom:50px;">
@@ -63,7 +63,7 @@
             <p>Connect with me on LinkedIn and get to know me better as a professional.</p>
           </div>
 
-          <a class="contact-icon" href="mailto:cmm5215@rit.edu" target="_top" class="pull-left" style="margin-left: 150px; margin-right: 20px;">
+          <a class="contact-icon pull-left" href="mailto:cmm5215@rit.edu" target="_top" style="margin-left: 150px; margin-right: 20px;">
             <img class="media-object visible-desktop" src="images/gmail.png">
           </a>
           <div class="media-body" style="margin-bottom: 50px;">
@@ -74,7 +74,7 @@
             <p>I run on east coast time and check my email frequently.</p>              
           </div>
 
-          <a class="contact-icon" href="https://twitter.com/court_mcgort" class="pull-left" style="margin-left: 150px; margin-right: 20px;">
+          <a class="contact-icon pull-left" href="https://twitter.com/court_mcgort" style="margin-left: 150px; margin-right: 20px;">
             <img class="media-object visible-desktop" src="images/twitter.png">
           </a>
           <div class="media-body" style="margin-bottom: 50px;">
@@ -85,7 +85,7 @@
             <p>My first language on Twitter is sarcasm. My second is #hashtag. Giggle at my lame jokes or snicker at my daily misfortunes.</p>
           </div>
 
-          <a class="contact-icon" href="https://github.com/cmcgorrill" class="pull-left" style="margin-left: 150px; margin-right: 20px;">
+          <a class="contact-icon pull-left" href="https://github.com/cmcgorrill" style="margin-left: 150px; margin-right: 20px;">
             <img class="media-object visible-desktop" src="images/git.png">
           </a>
           <div class="media-body">
