git instead of fb

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <a class="social" href="http://www.linkedin.com/in/courtneymcgorrill"><img src="images/linkedin.png"></a>
             <a class="social" href="mailto:cmm5215@rit.edu" target="_top"><img src="images/gmail.png"></a>           
             <a class="social" href="https://twitter.com/court_mcgort"><img src="images/twitter.png"></a>
-            <a class="social" href="https://facebook.com/courtneymcgorrill"><img src="images/facebook.png"></a>
+            <a class="social" href="https://github.com/cmcgorrill"><img src="images/git.png"></a>
           
             <l class="first-name">Courtney M<sup>c</sup>G</l><l class="last-name">orrill</l>
           </h1>
