--- a/hamper.html
+++ b/hamper.html
@@ -47,13 +47,14 @@
             <a class="social" href="http://www.linkedin.com/in/courtneymcgorrill"><img src="images/linkedin.png"></a>
             <a class="social" href="mailto:cmm5215@rit.edu" target="_top"><img src="images/gmail.png"></a>           
             <a class="social" href="https://twitter.com/court_mcgort"><img src="images/twitter.png"></a>
-            <a class="social" href="https://facebook.com/courtneymcgorrill"><img src="images/facebook.png"></a>
+            <a class="social" href="https://github.com/cmcgorrill"><img src="images/git.png"></a>
           
             <l class="first-name">Courtney M<sup>c</sup>G</l><l class="last-name">orrill</l>
           </h1>
           <div style="margin-left: 150px;">
               <h3 >Hamper</h3>
               <a href="http://devpost.com/software/hamper" target="_blank">Hamper on DevPost</a>
+              <h2>The epic tale of how Hamper came to be will be up soon.</h2>
           </div>
         </div>
       </div>
