--- a/hamper.html
+++ b/hamper.html
@@ -54,7 +54,14 @@
           <div style="margin-left: 150px;">
               <h2>Hamper</h2>
               <a href="http://devpost.com/software/hamper" target="_blank">Hamper on DevPost</a>
-              <h3>The epic tale of how Hamper came to be will be up soon.</h3>
+              <h3>The Context</h3>
+              <p>RIT's iOS App Challenge, hosted by Apple, is a 4 day hackathon that in 2016 took place from January 28-31. Teams of 2-3 competed to win various Apple products as prizes by building an iOS app from start to finish in the time constraints of the event.</p>
+              <h3>The Problem</h3>
+              <p>At the kickoff event, particpants were let in on the secret theme that our app needed to follow, Multi-Platform. Secondary device options include the Apple Watch, Apple TV, OSX, or even a web app.</p>
+              <h3>The Project</h3>
+              <p>Hamper is made to make mornings easier. After setting up the app by inputing various clothing items you own, Hamper will generate outfit options that you can swipe through based on the occasion you're dressing for and the weather that day. Just like Tinder, a left swipe means you aren't interested, and a right swipe means you've found your match. It stores your previously matched outfits and has an intuitive interface for adding clothing to the app. Your latest outfit is pushed to an Apple Watch extension that will display the items of clothing you've picked for the day, so you can easily recall what you're looking for while you're getting dressed. </p>
+              <h3>What's Next?</h3>
+              <p>Due to the fast pace of the competition, the UI and aesthetics leave much to be desired. Additionally, we would like to add more complex logic into how outfits are generated with regard to weather conditions and even general style rules about what makes a good outfit. During the competition we brainstormed several ideas of how to monetize the app and depending on our ability to dedicate more time to the project, would like to move forward and complete development by the end of 2017.  
           </div>
         </div>
       </div>
