hamper images and trying to get grid to work

--- a/hamper.html
+++ b/hamper.html
@@ -28,9 +28,9 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   <style id="holderjs-style" type="text/css"></style></head>
+  <body>
 
-
-      <div class="container-fluid">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
@@ -40,7 +40,7 @@
             <li><a href="/contact.html">Contact</a></li>
           </ul>
         </div>
-        <body>
+        
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <h1 class="page-header" align="right">
             <img src="images/monogram.ico" height="100px" width="100px" align="left">
@@ -61,12 +61,34 @@
               <h3>The Project</h3>
               <p>Hamper is made to make mornings easier. After setting up the app by inputing various clothing items you own, Hamper will generate outfit options that you can swipe through based on the occasion you're dressing for and the weather that day. Just like Tinder, a left swipe means you aren't interested, and a right swipe means you've found your match. It stores your previously matched outfits and has an intuitive interface for adding clothing to the app. Your latest outfit is pushed to an Apple Watch extension that will display the items of clothing you've picked for the day, so you can easily recall what you're looking for while you're getting dressed. </p>
               <h3>What's Next?</h3>
-              <p>Due to the fast pace of the competition, the UI and aesthetics leave much to be desired. Additionally, we would like to add more complex logic into how outfits are generated with regard to weather conditions and even general style rules about what makes a good outfit. During the competition we brainstormed several ideas of how to monetize the app and depending on our ability to dedicate more time to the project, would like to move forward and complete development by the end of 2017.  
+              <p>Due to the fast pace of the competition, a well thought out and consistent UI fell short on the list of priorities, and would be a major goal for an official first release. Additionally, we would like to add more complex logic into how outfits are generated with regard to weather conditions and even general style rules about what makes a good outfit. During the competition we brainstormed several ideas of how to monetize the app and depending on our ability to dedicate more time to the project, would like to move forward and complete development for an official release by the end of 2017.
+              <div class="container-fluid">
+                <div class="row">
+                  <div class="col-md-2">
+                    <p>Due to the fast pace of the competition, a well thought out and consistent UI fell short on the list of priorities, and would be a major goal for an official first release. Additionally, we would like to add more complex logic into how outfits are generated with regard to weather conditions and even general style rules about what makes a good outfit. During the competition we brainstormed several ideas of how to monetize the app and depending on our ability to dedicate more time to the project, would like to move forward and complete development for an official release by the end of 2017.</p>
+                  </div> 
+                  <div class="col-md-2">
+                     <p>Due to the fast pace of the competition, a well thought out and consistent UI fell short on the list of priorities, and would be a major goal for an official first release. Additionally, we would like to add more complex logic into how outfits are generated with regard to weather conditions and even general style rules about what makes a good outfit. During the competition we brainstormed several ideas of how to monetize the app and depending on our ability to dedicate more time to the project, would like to move forward and complete development for an official release by the end of 2017.</p>
+                  </div> 
+                  <div class="col-md-2">
+                   <!--  <img src="images/hamperlaunch.jpg"> -->
+                  </div> 
+                  <div class="col-md-2">
+                    <!-- <img src="images/hamperlaunch.jpg"> -->
+                  </div> 
+                  <div class="col-md-2">
+                    <!-- <img src="images/hamperlaunch.jpg"> -->
+                  </div> 
+                  <div class="col-md-2">
+                    <!-- <img src="images/hamperlaunch.jpg"> -->
+                  </div> 
+                </div>
+              </div>
           </div>
         </div>
       </div>
     </div>
-
+  </body>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -75,4 +97,4 @@
     <script src="assets/js/docs.min.js"></script>
 
 
-<div id="global-zeroclipboard-html-bridge" class="global-zeroclipboard-container" title="" style="position: absolute; left: 0px; top: -9999px; width: 15px; height: 15px; z-index: 999999999;" data-original-title="Copy to clipboard">      <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" id="global-zeroclipboard-flash-bridge" width="100%" height="100%">         <param name="movie" value="/assets/flash/ZeroClipboard.swf?noCache=1404919428012">         <param name="allowScriptAccess" value="sameDomain">         <param name="scale" value="exactfit">         <param name="loop" value="false">         <param name="menu" value="false">         <param name="quality" value="best">         <param name="bgcolor" value="#ffffff">         <param name="wmode" value="transparent">         <param name="flashvars" value="trustedOrigins=getbootstrap.com%2C%2F%2Fgetbootstrap.com%2Chttp%3A%2F%2Fgetbootstrap.com">         <embed src="/assets/flash/ZeroClipboard.swf?noCache=1404919428012" loop="false" menu="false" quality="best" bgcolor="#ffffff" width="100%" height="100%" name="global-zeroclipboard-flash-bridge" allowscriptaccess="sameDomain" allowfullscreen="false" type="application/x-shockwave-flash" wmode="transparent" pluginspage="http://www.macromedia.com/go/getflashplayer" flashvars="trustedOrigins=getbootstrap.com%2C%2F%2Fgetbootstrap.com%2Chttp%3A%2F%2Fgetbootstrap.com" scale="exactfit">                </object></div></body></html>
+<div id="global-zeroclipboard-html-bridge" class="global-zeroclipboard-container" title="" style="position: absolute; left: 0px; top: -9999px; width: 15px; height: 15px; z-index: 999999999;" data-original-title="Copy to clipboard">      <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" id="global-zeroclipboard-flash-bridge" width="100%" height="100%">         <param name="movie" value="/assets/flash/ZeroClipboard.swf?noCache=1404919428012">         <param name="allowScriptAccess" value="sameDomain">         <param name="scale" value="exactfit">         <param name="loop" value="false">         <param name="menu" value="false">         <param name="quality" value="best">         <param name="bgcolor" value="#ffffff">         <param name="wmode" value="transparent">         <param name="flashvars" value="trustedOrigins=getbootstrap.com%2C%2F%2Fgetbootstrap.com%2Chttp%3A%2F%2Fgetbootstrap.com">         <embed src="/assets/flash/ZeroClipboard.swf?noCache=1404919428012" loop="false" menu="false" quality="best" bgcolor="#ffffff" width="100%" height="100%" name="global-zeroclipboard-flash-bridge" allowscriptaccess="sameDomain" allowfullscreen="false" type="application/x-shockwave-flash" wmode="transparent" pluginspage="http://www.macromedia.com/go/getflashplayer" flashvars="trustedOrigins=getbootstrap.com%2C%2F%2Fgetbootstrap.com%2Chttp%3A%2F%2Fgetbootstrap.com" scale="exactfit">                </object></div></html>
