--- a/hamper.html
+++ b/hamper.html
@@ -1,4 +1,5 @@
-<html lang="en"><head>
+<html lang="en">
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,7 +28,8 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  <style id="holderjs-style" type="text/css"></style></head>
+    <style id="holderjs-style" type="text/css"></style>
+  </head>
   <body>
 
     <div class="container-fluid">
@@ -62,7 +64,7 @@
               <p>Hamper is made to make mornings easier. After setting up the app by inputing various clothing items you own, Hamper will generate outfit options that you can swipe through based on the occasion you're dressing for and the weather that day. Just like Tinder, a left swipe means you aren't interested, and a right swipe means you've found your match. It stores your previously matched outfits and has an intuitive interface for adding clothing to the app. Your latest outfit is pushed to an Apple Watch extension that will display the items of clothing you've picked for the day, so you can easily recall what you're looking for while you're getting dressed. </p>
               <h3>What's Next?</h3>
               <p>Due to the fast pace of the competition, a well thought out and consistent UI fell short on the list of priorities, and would be a major goal for an official first release. Additionally, we would like to add more complex logic into how outfits are generated with regard to weather conditions and even general style rules about what makes a good outfit. During the competition we brainstormed several ideas of how to monetize the app and depending on our ability to dedicate more time to the project, would like to move forward and complete development for an official release by the end of 2017.
-              <div class="container-fluid">
+             <!--  <div class="container">
                 <div class="row">
                   <div class="col-md-2">
                     <p>Due to the fast pace of the competition, a well thought out and consistent UI fell short on the list of priorities, and would be a major goal for an official first release. Additionally, we would like to add more complex logic into how outfits are generated with regard to weather conditions and even general style rules about what makes a good outfit. During the competition we brainstormed several ideas of how to monetize the app and depending on our ability to dedicate more time to the project, would like to move forward and complete development for an official release by the end of 2017.</p>
@@ -71,19 +73,15 @@
                      <p>Due to the fast pace of the competition, a well thought out and consistent UI fell short on the list of priorities, and would be a major goal for an official first release. Additionally, we would like to add more complex logic into how outfits are generated with regard to weather conditions and even general style rules about what makes a good outfit. During the competition we brainstormed several ideas of how to monetize the app and depending on our ability to dedicate more time to the project, would like to move forward and complete development for an official release by the end of 2017.</p>
                   </div> 
                   <div class="col-md-2">
-                   <!--  <img src="images/hamperlaunch.jpg"> -->
                   </div> 
                   <div class="col-md-2">
-                    <!-- <img src="images/hamperlaunch.jpg"> -->
                   </div> 
                   <div class="col-md-2">
-                    <!-- <img src="images/hamperlaunch.jpg"> -->
                   </div> 
                   <div class="col-md-2">
-                    <!-- <img src="images/hamperlaunch.jpg"> -->
                   </div> 
                 </div>
-              </div>
+              </div> -->
           </div>
         </div>
       </div>
