--- a/hamper.html
+++ b/hamper.html
@@ -15,6 +15,7 @@
     <!-- Custom styles for this template -->
     <link href="dist/css/dashboard.css" rel="stylesheet">
     <link href="dist/css/header.css" rel="stylesheet">
+    <link href="dist/css/hamper.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -60,30 +61,31 @@
           <p>At the kickoff event, particpants were let in on the secret theme that our app needed to follow, Multi-Platform. Secondary device options include the Apple Watch, Apple TV, OSX, or even a web app.</p>
           <h3>The Project</h3>
           <p>Hamper is made to make mornings easier. After setting up the app by inputing various clothing items you own, Hamper will generate outfit options that you can swipe through based on the occasion you're dressing for and the weather that day. Just like Tinder, a left swipe means you aren't interested, and a right swipe means you've found your match. It stores your previously matched outfits and has an intuitive interface for adding clothing to the app. Your latest outfit is pushed to an Apple Watch extension that will display the items of clothing you've picked for the day, so you can easily recall what you're looking for while you're getting dressed. </p>
-          <h3>What's Next?</h3>
-          <p>Due to the fast pace of the competition, a well thought out and consistent UI fell short on the list of priorities, and would be a major goal for an official first release. Additionally, we would like to add more complex logic into how outfits are generated with regard to weather conditions and even general style rules about what makes a good outfit. During the competition we brainstormed several ideas of how to monetize the app and depending on our ability to dedicate more time to the project, would like to move forward and complete development for an official release by the end of 2017.
-          <div class="container">
+          <div class="container-fluid">
             <div class="row">
               <div class="col-md-2">
-                <img src="images/hamperlaunch.jpg">
+                <img class="hamper" src="images/hamperlaunch.jpg">
               </div> 
               <div class="col-md-2">
-                 <img src="images/outfit.jpg">
+                 <img class="hamper" src="images/outfit.jpg">
               </div> 
               <div class="col-md-2">
-                 <img src="images/leftswipe.jpg">
+                 <img class="hamper" src="images/leftswipe.jpg">
               </div> 
               <div class="col-md-2">
-                 <img src="images/rightswipe.jpg">
+                 <img class="hamper" src="images/rightswipe.jpg">
               </div> 
               <div class="col-md-2">
-                 <img src="images/closet.jpg">
+                 <img class="hamper" src="images/closet.jpg">
               </div> 
               <div class="col-md-2">
-                 <img src="images/completeclothes.jpg">
+                 <img class="hamper" src="images/completeclothes.jpg">
               </div> 
             </div>
           </div>
+          <h3>What's Next?</h3>
+          <p>Due to the fast pace of the competition, a well thought out and consistent UI fell short on the list of priorities, and would be a major goal for an official first release. Additionally, we would like to add more complex logic into how outfits are generated with regard to weather conditions and even general style rules about what makes a good outfit. During the competition we brainstormed several ideas of how to monetize the app and depending on our ability to dedicate more time to the project, would like to move forward and complete development for an official release by the end of 2017.
+          
       </div>
     </div>
   </body>
