fixed contact formatting

--- a/contact.html
+++ b/contact.html
@@ -51,50 +51,56 @@
         </div>
         <body>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <a class="contact-icon pull-left" href="http://www.linkedin.com/in/courtneymcgorrill" style="margin-left: 50px; margin-right: 20px;">
-            <img class="media-object visible-desktop" src="images/linkedin.png">
-          </a>
-          <div class="media-body" style="margin-bottom:50px;">
-            <h3 class="media-heading">Connect with me.</h3>
-            <a class="contact-icon" href="http://www.linkedin.com/in/courtneymcgorrill">
-              <img class="media-object hidden-desktop" src="images/linkedin.png">
-            </a>
-            <p>Connect with me on LinkedIn and get to know me better as a professional.</p>
+          <div class="container-fluid">
+            <div class="row">
+              <a class="contact-icon pull-left" href="http://www.linkedin.com/in/courtneymcgorrill" style="margin-right: 20px;">
+                <img class="media-object visible-desktop" src="images/linkedin.png">
+              </a>
+              <div class="media-body" style="margin-bottom:50px;">
+                <h3 class="media-heading">Connect with me.</h3>
+                <a class="contact-icon" href="http://www.linkedin.com/in/courtneymcgorrill">
+                  <img class="media-object hidden-desktop" src="images/linkedin.png">
+                </a>
+                <p>Connect with me on LinkedIn and get to know me better as a professional while I also get to know myself better as a professional.</p>
+              </div>
+            </div>
+            <div class="row">
+              <a class="contact-icon pull-left" href="mailto:cmm5215@rit.edu" target="_top" style="margin-right: 20px;">
+                <img class="media-object visible-desktop" src="images/gmail.png">
+              </a>
+              <div class="media-body" style="margin-bottom: 50px;">
+                <h3 class="media-heading">Mail me.</h3>
+                <a class="contact-icon" href="mailto:cmm5215@rit.edu" target="_top">
+                  <img class="media-object hidden-desktop" src="images/gmail.png">
+                </a>
+                <p>I run on east coast time and check my email <strike>obsessively</strike> frequently.</p>              
+              </div>
+            </div>
+            <div class="row">
+              <a class="contact-icon pull-left" href="https://twitter.com/court_mcgort" style="margin-right: 20px;">
+                <img class="media-object visible-desktop" src="images/twitter.png">
+              </a>
+              <div class="media-body" style="margin-bottom: 50px;">
+                <h3 class="media-heading">Follow me.</h3>
+                <a class="contact-icon" href="https://twitter.com/court_mcgort">
+                  <img class="media-object hidden-desktop" src="images/twitter.png">
+                </a>
+                <p>My first language on Twitter is sarcasm. My second is #hashtag. Giggle at my lame jokes or snicker at my daily misfortunes.</p>
+              </div>
+            </div>
+            <div class="row">
+              <a class="contact-icon pull-left" href="https://github.com/cmcgorrill" style="margin-right: 20px;">
+                <img class="media-object visible-desktop" src="images/git.png">
+              </a>
+              <div class="media-body">
+                <h3 class="media-heading">Admire me.</h3>
+                <a class="contact-icon" href=href="https://github.com/cmcgorrill">
+                  <img class="media-object hidden-desktop" src="images/git.png">
+                </a>
+                <p>Rather, admire my code. Keep up with the questionable lines I throw together for school projects, and the fun stuff I make because I like to.</p>
+              </div>
+            </div>
           </div>
-
-          <a class="contact-icon pull-left" href="mailto:cmm5215@rit.edu" target="_top" style="margin-left: 150px; margin-right: 20px;">
-            <img class="media-object visible-desktop" src="images/gmail.png">
-          </a>
-          <div class="media-body" style="margin-bottom: 50px;">
-            <h3 class="media-heading">Mail me.</h3>
-            <a class="contact-icon" href="mailto:cmm5215@rit.edu" target="_top">
-              <img class="media-object hidden-desktop" src="images/gmail.png">
-            </a>
-            <p>I run on east coast time and check my email frequently.</p>              
-          </div>
-
-          <a class="contact-icon pull-left" href="https://twitter.com/court_mcgort" style="margin-left: 150px; margin-right: 20px;">
-            <img class="media-object visible-desktop" src="images/twitter.png">
-          </a>
-          <div class="media-body" style="margin-bottom: 50px;">
-            <h3 class="media-heading">Follow me.</h3>
-            <a class="contact-icon" href="https://twitter.com/court_mcgort">
-              <img class="media-object hidden-desktop" src="images/twitter.png">
-            </a>
-            <p>My first language on Twitter is sarcasm. My second is #hashtag. Giggle at my lame jokes or snicker at my daily misfortunes.</p>
-          </div>
-
-          <a class="contact-icon pull-left" href="https://github.com/cmcgorrill" style="margin-left: 150px; margin-right: 20px;">
-            <img class="media-object visible-desktop" src="images/git.png">
-          </a>
-          <div class="media-body">
-            <h3 class="media-heading">Admire me.</h3>
-            <a class="contact-icon" href=href="https://github.com/cmcgorrill">
-              <img class="media-object hidden-desktop" src="images/git.png">
-            </a>
-            <p>Well, admire my code. Keep up with the sloppy code I throw together for school projects, and the occasional personal project.</p>
-          </div>
-
         </div>
       </div>
     </div>
