more index stuff

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <img class="my-image pull-left media-object visible-desktop" src="images/mudtugme.jpg">
           <div class="media-body">
-            <h3 class="media-heading">Things To Know</h3>
+            <h3>About This</h3>
+              <p>Welcome to my running online portfolio. It's nothing fancy because I want my projects to speak to my abilities more than the wrappings I present them to you in. Plus it's wicked easy to add things when I keep this simple.</p>
+            <h3>About Me</h3>
               <p>21 years old and originally from Maine. </p>
               <p>4<sup>th</sup> year Software Engineering student at Rochester Institute of Technology in Rochester, New York.</p>
               <p>Previous internships and co-ops include EMC, HubSpot, and Involution Studios.</p>
