--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
                 <a class="contact-icon" href="https://twitter.com/court_mcgort">
                   <img class="media-object hidden-desktop" src="images/twitter.png">
                 </a>
-                <p>My first language on Twitter is sarcasm. My second is #hashtag. Giggle at my lame jokes or snicker at my daily misfortunes.</p>
+                <p>I think I'm funny. If you disagree, you're wrong.</p>
               </div>
             </div>
             <div class="row">
