--- a/hamper.html
+++ b/hamper.html
@@ -84,7 +84,7 @@
             </div>
           </div>
           <h3>What's Next?</h3>
-          <p>Due to the fast pace of the competition, a well thought out and consistent UI fell short on the list of priorities, and would be a major goal for an official first release. Additionally, we would like to add more complex logic into how outfits are generated with regard to weather conditions and even general style rules about what makes a good outfit. During the competition we brainstormed several ideas of how to monetize the app and depending on our ability to dedicate more time to the project, would like to move forward and complete development for an official release by the end of 2017.
+          <p>Due to the fast pace of the competition, a well thought out and consistent UI fell short on the list of priorities, and would be a major goal for an official first release. Additionally, we would like to add more complex logic into how outfits are generated with regard to weather conditions and even general style rules about what makes a good outfit. During the competition we brainstormed several ideas of how to monetize the app and depending on our ability to dedicate more time to the project, would like to move forward and complete development for an official release by the summer of 2017.
           
       </div>
     </div>
