--- a/index.html
+++ b/index.html
@@ -54,16 +54,15 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <img class="my-image pull-left media-object visible-desktop" src="images/mudtugme.jpg">
           <div class="media-body">
-            <h3>About This</h3>
-              <p>Welcome to my running online portfolio. It's nothing fancy because I want my projects to speak to my abilities more than the wrappings I present them to you in. Plus it's wicked easy to add things when I keep this simple.</p>
             <h3>About Me</h3>
-              <p>21 years old and originally from Maine. </p>
-              <p>4<sup>th</sup> year Software Engineering student at Rochester Institute of Technology in Rochester, New York.</p>
-              <p>Previous internships and co-ops include EMC, HubSpot, and Involution Studios.</p>
-              <p>Active member of Zeta Tau Alpha, Iota Psi chapter.</p>
-              <p>Willing to fix your shattered smartphone screen.</p>
+              <p>22 years old and originally from Maine. </p>
+              <p>5<sup>th</sup> year Software Engineering student at Rochester Institute of Technology in Rochester, New York.</p>
+              <p>Will fix your shattered smartphone screen for free, if you buy the parts.</p>
+              <p>Will charge you if I have to do it twice.</p>
               <p>Love running in all weather, but hate waking up to do it.</p>
-              <p>Bagel fan, pizza enthusiast and coffee addict.</p>
+              <p>Bagel fan, pizza enthusiast, and coffee addict.</p>
+              <p>Go Pats.</p>
+              <p>Go Sox.</p>
               <p>To learn more about me professionally, take a look at my <a  href="https://resume.creddle.io/resume/4tqptjm6x7" style="width: 50px">resume</a>.</p>
               <img class="media-object hidden-desktop" src="images/mudtugme.jpg">
           </div>
