--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <p>Bagel fan, pizza enthusiast, and coffee addict.</p>
               <p>Go Pats.</p>
               <p>Go Sox.</p>
-              <p>To learn more about me professionally, take a look at my <a  href="https://resume.creddle.io/resume/4tqptjm6x7" style="width: 50px">resume</a>.</p>
+              <p>To learn more about me professionally, take a look at my <a href="https://resume.creddle.io/resume/4tqptjm6x7" target="blank" style="width: 50px">resume</a>.</p>
               <img class="media-object hidden-desktop" src="images/mudtugme.jpg">
           </div>
         </div>
