--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
           <img class="my-image pull-left media-object visible-desktop" src="images/mudtugme.jpg">
           <div class="media-body">
             <h3>About Me</h3>
-              <p>22 years old and originally from Maine. </p>
-              <p>5<sup>th</sup> year Software Engineering student at Rochester Institute of Technology in Rochester, New York.</p>
+              <p>22 years old and originally from Maine.</p>
+              <p>Senior Software Engineering student at Rochester Institute of Technology in Rochester, New York.</p>
               <p>Will fix your shattered smartphone screen for free, if you buy the parts.</p>
-              <p>Will charge you if I have to do it twice.</p>
+              <p>Will charge you, if I have to do it twice.</p>
               <p>Love running in all weather, but hate waking up to do it.</p>
               <p>Bagel fan, pizza enthusiast, and coffee addict.</p>
               <p>Go Pats.</p>
