--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </ul>
         </div>
         <body>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        <div class="col-xs-12 col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <img class="my-image pull-left media-object visible-desktop" src="images/mudtugme.jpg">
           <div class="media-body">
             <h3>About Me</h3>
@@ -64,7 +64,7 @@
               <p>Go Pats.</p>
               <p>Go Sox.</p>
               <p>To learn more about me professionally, take a look at my <a href="https://resume.creddle.io/resume/4tqptjm6x7" target="blank" style="width: 50px">resume</a>.</p>
-              <img class="media-object hidden-desktop" src="images/mudtugme.jpg">
+              <img class="phone-image media-object visible-phone" src="images/mudtugme.jpg">
           </div>
         </div>
       </div>
