--- a/contact.html
+++ b/contact.html
@@ -28,18 +28,46 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  <style id="holderjs-style" type="text/css"></style></head>
+    <style id="holderjs-style" type="text/css"></style></head>
+  </head>
+  <body>
 
+    <nav class="visible-phone navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">CM<sup>c</sup>G</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="/mudtug.html">Mud Tug</a></li>
+            <li><a href="/hamper.html">Hamper</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+  
     <div class="container-fluid">
-      <h1 class="page-header" align="right">
-        <img src="images/monogram.ico" height="100px" width="100px" align="left">
-        <a class="social" href="http://www.linkedin.com/in/courtneymcgorrill"><img src="images/linkedin.png"></a>
-        <a class="social" href="mailto:cmm5215@rit.edu" target="_top"><img src="images/gmail.png"></a>           
-        <a class="social" href="https://twitter.com/court_mcgort"><img src="images/twitter.png"></a>
-        <a class="social" href="https://github.com/cmcgorrill"><img src="images/git.png"></a>
-      
-        <l class="first-name">Courtney M<sup>c</sup>G</l><l class="last-name">orrill</l>
-      </h1>
+      <div class="headers visible-desktop visible-tablet">
+        <h1 class="page-header" align="right">
+          <img src="images/monogram.ico" height="100px" width="100px" align="left">
+          <a class="social" href="http://www.linkedin.com/in/courtneymcgorrill"><img src="images/linkedin.png"></a>
+          <a class="social" href="mailto:cmm5215@rit.edu" target="_top"><img src="images/gmail.png"></a>           
+          <a class="social" href="https://twitter.com/court_mcgort"><img src="images/twitter.png"></a>
+          <a class="social" href="https://github.com/cmcgorrill"><img src="images/git.png"></a>
+        
+          <l class="first-name">Courtney M<sup>c</sup>G</l><l class="last-name">orrill</l>
+        </h1>
+      </div>
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
