--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">CM<sup>c</sup>G</a>
+          <a class="navbar-brand" href="/">CM<sup>c</sup>G</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
