Change some wording around...for the flow

--- a/hamper.html
+++ b/hamper.html
@@ -82,7 +82,7 @@
           <h2>Hamper</h2>
           <a href="http://devpost.com/software/hamper" target="_blank">Hamper on DevPost</a>
           <h3>The Context</h3>
-          <p>RIT's iOS App Challenge, hosted by Apple, is a 4 day hackathon that in 2016 took place from January 28-31. Teams of 2-3 competed to win various Apple products as prizes by building an iOS app from start to finish in the time constraints of the event.</p>
+          <p>RIT's iOS App Challenge, hosted by Apple, is a 4 day hackathon that took place from January 28-31 in 2016. Teams of 2-3 competed to win various Apple products as prizes by building an iOS app from start to finish in the time constraints of the event.</p>
           <h3>The Problem</h3>
           <p>At the kickoff event, particpants were let in on the secret theme that our app needed to follow, Multi-Platform. Secondary device options include the Apple Watch, Apple TV, OSX, or even a web app.</p>
           <h3>The Project</h3>
