--- a/hamper.html
+++ b/hamper.html
@@ -84,9 +84,9 @@
           <h3>The Context</h3>
           <p>RIT's iOS App Challenge, hosted by Apple, is a 4 day hackathon that took place from January 28-31 in 2016. Teams of 2-3 competed to win various Apple products as prizes by building an iOS app from start to finish in the time constraints of the event.</p>
           <h3>The Problem</h3>
-          <p>At the kickoff event, particpants were let in on the secret theme that our app needed to follow, Multi-Platform. Secondary device options include the Apple Watch, Apple TV, OSX, or even a web app.</p>
+          <p>At the kickoff event, participants were let in on the secret theme that our app needed to follow, Multi-Platform. Secondary device options include the Apple Watch, Apple TV, OSX, or even a web app.</p>
           <h3>The Project</h3>
-          <p>Hamper is made to make mornings easier. After setting up the app by inputing various clothing items you own, Hamper will generate outfit options that you can swipe through based on the occasion you're dressing for and the weather that day. Just like Tinder, a left swipe means you aren't interested, and a right swipe means you've found your match. It stores your previously matched outfits and has an intuitive interface for adding clothing to the app. Your latest outfit is pushed to an Apple Watch extension that will display the items of clothing you've picked for the day, so you can easily recall what you're looking for while you're getting dressed. </p>
+          <p>Hamper is made to make mornings easier. After setting up the app by inputting various clothing items you own, Hamper will generate outfit options that you can swipe through based on the occasion you're dressing for and the weather that day. Just like Tinder, a left swipe means you aren't interested, and a right swipe means you've found your match. It stores your previously matched outfits and has an intuitive interface for adding clothing to the app. Your latest outfit is pushed to an Apple Watch extension that will display the items of clothing you've picked for the day, so you can easily recall what you're looking for while you're getting dressed. </p>
           <div class="container-fluid">
             <div class="row">
               <div class="col-md-2">
