Shift key is in the middle left

--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
                 <a class="contact-icon" href="mailto:cmm5215@rit.edu" target="_top">
                   <img class="media-object hidden-desktop" src="images/gmail.png">
                 </a>
-                <p>I run on east coast time and check my email <strike>obsessively</strike> frequently.</p>              
+                <p>I run on East Coast time and check my email <strike>obsessively</strike> frequently.</p>              
               </div>
             </div>
             <div class="row">
