--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
           <div class="media-body">
             <h3>About Me</h3>
               <p>23 years old and originally from Maine.</p>
-              <p>Senior Software Engineering student at Rochester Institute of Technology in Rochester, New York.</p>
+              <p>Current Software Engineer at Cimpress in Boston, MA</p>
+              <p>Former Software Engineering student at Rochester Institute of Technology in Rochester, New York.</p>
               <p>Will fix your shattered smartphone screen for free, if you buy the parts.</p>
               <p>Will charge you, if I have to do it twice.</p>
               <p>Love running in all weather, but hate waking up to do it.</p>
